2005-01-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/aboutdialog.rb, aboutdialog2.rb: Added.
	* src/rbgtkaboutdialog.c: Added for GTK+-2.6.x.

2005-01-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/color_font_button.rb, misc_button.rb: Rename 
	color_font_button.rb to misc_button.rb. Added sample for
	Gtk::FileChooserButton.
	* src/rbgtkfilechooserbutton.c: Added for GTK+-2.6.x.
	* src/rbgtkmenutoolbutton.c: Added for GTK+-2.6.x. 
	* src/rbgtkcellview.c: Added for GTK+-2.6.x. 
	* src/rbgtktoggletoolbutton.c: Accept symbol as stock_id of 
	Gtk::ToggleToolButton.new. 
	* src/rbgtkradiotoolbutton.c, rbgtktoolbutton.c: Ditto. 
	* src/rbgtkcellrenderercombo.c: Added for GTK+-2.6.x.
	* src/rbgtkiconview.c: Added for GTK+-2.6.x.
	* sample/gtk-demo/iconview.rb: Added for Gtk::IconView.
	* sample/gtk-demo/main.rb, gnome-fs-directory.png, 
	gnome-fs-regular.png: Ditto.
	* sample/gtk-demo/*.rb: Added some informations at the headers.

2004-12-31  Ferenc Engard <ferenc@engard.hu>

	* sample/gtk-demo/dialog.rb: Fix a bug.

2004-12-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/tree_progress.rb: Improved.
	* src/rbgtkcellrendererprogress.c: Improved. 

2004-12-28  Darren Willis  <dazjw@paradise.net.nz>

	* src/rbgtkcellrendererprogress.c: Added for GTK+-2.6.x.
	* sample/misc/tree_progress.rb: Added. A sample script for 
	Gtk::CellRendererProgress.

2004-12-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkconst.c: Added Gtk::ScrollStep for GTK+-2.4.x. 
	* src/rbgtkmain.c: Added Gtk.check_version?. 
	* src/rbgtkcelllayout.c: When Gtk::CellLayout#set_cell_data_func is 
	not given a block, it may be removed the data_func.

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c, rbgtkscale.c: Fix warning for GTK+-2.2.x.
	* src/rbgtkclipboard.c: Fix warning for GTK+-2.0.x. 

2004-11-06  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgtktoolbutton.c: Gtk::ToolButton.new
	  Use Symbols instead of Strings for stock-id (as elsewhere)
	